@@ -13,6 +13,7 @@
     and values 0 to 10. In the UI, ratings are show as 5 stars.
  9. If we fail to download a cover, don't keep trying next time song is played.
 10. Simplify toolbar cover widget, no border.
+11. Allow Qt preference dialog to shrink smaller.
 
 1.4.1
 -----
